--- a/style.css
+++ b/style.css
@@ -35,11 +35,12 @@ a.mainlogo{
     color: inherit;
 }
 
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 800px) {
     .mainlogo {
         display: none;
     }
 }
+
 
 
 
